--- a/paginas/Politica/index.html
+++ b/paginas/Politica/index.html
@@ -22,7 +22,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="../../home.html">
+            <a class="navbar-brand" href="../../index.html">
                 <h3>Notícias.com</h3>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
