--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <!-- CSS da página Home-->
-    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -49,7 +49,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="titulo-pagina"><strong>CONTATO</strong></a>
+                        <a class="nav-link" id="titulo-pagina" href="./paginas/Contato/index.html"><strong>CONTATO</strong></a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -71,7 +71,7 @@
                 </a>
             </div>
             <div class="row mt-3">
-                <div class="col-7">
+                <div class="col-md-7 col-xl-7">
                     <a href="./paginas/Tecnologia/noticias/noticia1/index.html">
                         <div class="card text-bg-dark">
                             <img src="./imagens/tec1.jpg" class="card-img"
@@ -83,7 +83,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-5 mt-2">
+                <div class="col-md-5 col-xl-5 mt-2">
                     <a href="./paginas/Tecnologia/noticias/noticia2/index.html">
                         <div class="card mb-5" style="max-width: 540px;">
                             <div class="row g-0">
@@ -136,14 +136,14 @@
             </div>
         </div>
         <hr>
-        <div class="row mt-5 mb-5 conteudo">
+        <div class="row mt-5 mb-5">
             <div class="row">
                 <a href="./paginas/Politica/index.html">
                     <h2 id="titulo-noticia">Política</h2>
                 </a>
             </div>
             <div class="row">
-                <div class="col me-2">
+                <div class="col-md-3 col-xl-3">
                     <a href="./paginas/Politica/noticias/noticia1/index.html">
                         <div class="card mt-4" style="width: 17rem;">
                             <img src="./imagens/politica1.jpg" class="card-img-top" alt="...">
@@ -154,7 +154,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col me-2">
+                <div class="col-md-3 col-xl-3">
                     <a href="./paginas/Politica/noticias/noticia2/index.html">
                         <div class="card mt-4" style="width: 17rem;">
                             <img src="./imagens/politica2.jpg" class="card-img-top" alt="...">
@@ -165,7 +165,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col me-2">
+                <div class="col-md-3 col-xl-3">
                     <a href="./paginas/Politica/noticias/noticia3/index.html">
                         <div class="card mt-4" style="width: 17rem;">
                             <img src="./imagens/politica3.jpg" class="card-img-top" alt="...">
@@ -176,7 +176,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col me-2">
+                <div class="col-md-3 col-xl-3">
                     <a href="./paginas/Politica/noticias/noticia4/index.html">
                         <div class="card mt-4" style="width: 17rem;">
                             <img src="./imagens/politica4.jpg" class="card-img-top" alt="...">
@@ -197,7 +197,7 @@
                 </a>
             </div>
             <div class="row mt-3">
-                <div class="col-7">
+                <div class="col-md-7 col-xl-7">
                     <a href="./paginas/Esporte/noticias/noticia1/index.html">
                         <div class="card text-bg-dark">
                             <img src="./imagens/esporte1.jpg" class="card-img"
@@ -209,7 +209,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-5 mt-2">
+                <div class="col-md-5 col-xl-5 mt-2">
                     <a href="./paginas/Esporte/noticias/noticia2/index.html">
                         <div class="card mb-5" style="max-width: 540px;">
                             <div class="row g-0">
@@ -272,7 +272,7 @@
                 </a>
             </div>
             <div class="row">
-                <div class="col me-2">
+                <div class="col-md-3 col-xl-3">
                     <a href="./paginas/Entretenimento/noticias/noticia1/index.html">
                         <div class="card mt-4" style="width: 17rem;">
                             <img src="./imagens/entretenimento1.jpg" class="card-img-top" alt="...">
@@ -283,7 +283,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col me-2">
+                <div class="col-md-3 col-xl-3">
                     <a href="./paginas/Entretenimento/noticias/noticia2/index.html">
                         <div class="card mt-4" style="width: 17rem;">
                             <img src="./imagens/entretenimento2.jpg" class="card-img-top" alt="...">
@@ -294,7 +294,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col me-2">
+                <div class="col-md-3 col-xl-3">
                     <a href="./paginas/Entretenimento/noticias/noticia3/index.html">
                         <div class="card mt-4" style="width: 17rem;">
                             <img src="./imagens/entretenimento3.jpg" class="card-img-top" alt="...">
@@ -304,7 +304,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col me-2">
+                <div class="col-md-3 col-xl-3">
                     <a href="./paginas/Entretenimento/noticias/noticia4/index.html">
                         <div class="card mt-4" style="width: 17rem;">
                             <img src="./imagens/entretenimento4.jpg" class="card-img-top" alt="...">
@@ -325,7 +325,7 @@
                 </a>
             </div>
             <div class="row mt-3">
-                <div class="col-7">
+                <div class="col-md-7 col-xl-7">
                     <a href="./paginas/Saude/noticias/noticia1/index.html">
                         <div class="card text-bg-dark">
                             <img src="./imagens/saude1.jpg" class="card-img"
@@ -337,7 +337,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-5 mt-2">
+                <div class="col-md-5 col-xl-5 mt-2">
                     <a href="./paginas/Saude/noticias/noticia2/index.html">
                         <div class="card mb-5" style="max-width: 540px;">
                             <div class="row g-0">
