--- a/paginas/Esporte/noticias/noticia3/index.html
+++ b/paginas/Esporte/noticias/noticia3/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <!-- CSS da página de tecnologia-->
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
