--- a/paginas/Politica/index.html
+++ b/paginas/Politica/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <!-- CSS da página de tecnologia-->
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="titulo-pagina"><strong>CONTATO</strong></a>
+                        <a class="nav-link" id="titulo-pagina"  href="../Contato/index.html"><strong>CONTATO</strong></a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -70,7 +70,7 @@
                 <h1 id="titulo-noticia">Política</h1>
             </div>
             <div class="row mt-3">
-                <div class="col-12 mt-2">
+                <div class="col-md mt-2">
                     <a href="./noticias/noticia1/index.html">
                         <div class="card mb-5" style="max-width: 900px;">
                             <div class="row g-0">
@@ -91,7 +91,7 @@
                     </a>
                 </div>
                 <hr />
-                <div class="col-12 mt-2">
+                <div class="col-md mt-2">
                     <a href="./noticias/noticia2/index.html">
                         <div class="card mb-5" style="max-width: 900px;">
                             <div class="row g-0">
@@ -112,7 +112,7 @@
                     </a>
                 </div>
                 <hr />
-                <div class="col-12 mt-2">
+                <div class="col-md mt-2">
                     <a href="./noticias/noticia3/index.html">
                         <div class="card mb-5" style="max-width: 900px;">
                             <div class="row g-0">
@@ -133,7 +133,7 @@
                     </a>
                 </div>
                 <hr />
-                <div class="col-12 mt-2">
+                <div class="col-md mt-2">
                     <a href="./noticias/noticia4/index.html">
                         <div class="card mb-5" style="max-width: 900px;">
                             <div class="row g-0">
