--- a/paginas/Entretenimento/index.html
+++ b/paginas/Entretenimento/index.html
@@ -69,10 +69,10 @@
             <div class="row">
                 <h1 id="titulo-noticia">Entretenimento</h1>
             </div>
-            <div class="row mt-3">
+            <div class="row">
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia1/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/entretenimento1.jpg" class="img-fluid rounded-start" alt="Os filmes que chegam aos cinemas brasileiros nesta
@@ -93,7 +93,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia2/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/entretenimento2.jpg" class="img-fluid rounded-start" alt="Ouça à playlist do episódio “Terra de Caubóis” do
@@ -114,7 +114,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia3/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/entretenimento3.jpg" class="img-fluid rounded-start" alt="Simone e Simaria anunciam fim da dupla">
@@ -133,7 +133,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia4/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/entretenimento4.jpg" class="img-fluid rounded-start" alt="Briga de Brad Pitt e Angelina Jolie em 2016:
