--- a/paginas/Esporte/index.html
+++ b/paginas/Esporte/index.html
@@ -69,10 +69,10 @@
             <div class="row">
                 <h1 id="titulo-noticia">Esporte</h1>
             </div>
-            <div class="row mt-3">
+            <div class="row">
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia1/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/esporte1.jpg" class="img-fluid rounded-start" alt="Brasil enfrentará Gana e Tunísia nos últimos
@@ -93,7 +93,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia2/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/esporte2.jpg" class="img-fluid rounded-start" alt="Casemiro quer se transferir para o
@@ -114,7 +114,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia3/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/esporte3.jpg" class="img-fluid rounded-start" alt="Flu e São Paulo fazem primeiro jogo em casa
@@ -135,7 +135,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia4/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/esporte4.jpg" class="img-fluid rounded-start" alt="Brasileirão Série B: final de semana tem
