--- a/paginas/Politica/index.html
+++ b/paginas/Politica/index.html
@@ -69,10 +69,10 @@
             <div class="row">
                 <h1 id="titulo-noticia">Política</h1>
             </div>
-            <div class="row mt-3">
+            <div class="row">
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia1/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/politica1.jpg" class="img-fluid rounded-start" alt="Lula e Bolsonaro não querem apresentar propostas
@@ -93,7 +93,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia2/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/politica2.jpg" class="img-fluid rounded-start" alt="Ciro Gomes critica lucro e distribuição de
@@ -114,7 +114,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia3/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/politica3.jpg" class="img-fluid rounded-start" alt="Embaixadas consideram Ciro Nogueira ‘vago’ na
@@ -124,7 +124,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title" id="subtitulo">Embaixadas consideram Ciro Nogueira ‘vago’ na
                                             defesa das urnas em evento dos Poderes e destacam fala de Toffoli</h5>
-                                        <p class="card-text mt-5"><small class="text-muted"><i
+                                        <p class="card-text mt-4"><small class="text-muted"><i
                                                     class="bi bi-clock me-2"></i>20/08/2022 às 13:47</small></p>
                                     </div>
                                 </div>
@@ -135,7 +135,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia4/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/politica4.jpg" class="img-fluid rounded-start" alt="Ministra do TSE nega pedido de Lula para apagar
