--- a/paginas/Saude/index.html
+++ b/paginas/Saude/index.html
@@ -69,10 +69,10 @@
             <div class="row">
                 <h1 id="titulo-noticia">Saúde</h1>
             </div>
-            <div class="row mt-3">
+            <div class="row">
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia1/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/saude1.jpg" class="img-fluid rounded-start" alt="Há cinco dias, média móvel de mortes por Covid no
@@ -93,7 +93,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia2/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/saude2.jpg" class="img-fluid rounded-start" alt="Dia D de vacinação contra a poliomielite e
@@ -114,7 +114,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia3/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/saude3.jpg" class="img-fluid rounded-start" alt="Pfizer envia à Anvisa pedido de uso emergencial da
@@ -135,7 +135,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia4/index.html">
-                        <div class="card mb-5" style="max-width: 900px;">
+                        <div class="card mb-4" style="max-width: 900px;">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/saude4.jpg" class="img-fluid rounded-start" alt="Covid-19 provoca ao menos uma sequela em 65% dos
