--- a/paginas/Contato/index.html
+++ b/paginas/Contato/index.html
@@ -169,7 +169,7 @@
                 <div class="col-md-6">
                     <label for="email">Email</label>
                     <input type="email" class="form-control rounded inputContato" id="email"
-                        placeholder="examplo@gmail.com" required>
+                        placeholder="exemplo@gmail.com" required>
                     <small class="campoErro" id="erroEmail"></small>
                 </div>
             </div>
