Site de Noticias

--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
                 </a>
             </div>
             <div class="row mt-3">
-                <div class="col-md-7 col-xl-7">
+                <div class="col-lg-7">
                     <a href="./paginas/Tecnologia/noticias/noticia1/index.html">
                         <div class="card text-bg-dark">
                             <img src="./imagens/tec1.jpg" class="card-img"
@@ -83,9 +83,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-5 col-xl-5 mt-2">
+                <div class="col-lg-5" id="noticia-vertical">
                     <a href="./paginas/Tecnologia/noticias/noticia2/index.html">
-                        <div class="card mb-5" style="max-width: 540px;">
+                        <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="./imagens/tec2.jpg" class="img-fluid rounded-start" alt="...">
@@ -101,7 +101,7 @@
                         </div>
                     </a>
                     <a href="./paginas/Tecnologia/noticias/noticia3/index.html">
-                        <div class="card mb-5" style="max-width: 540px;">
+                        <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="./imagens/tec3.jpg" class="img-fluid rounded-start" alt="...">
@@ -117,7 +117,7 @@
                         </div>
                     </a>
                     <a href="./paginas/Tecnologia/noticias/noticia4/index.html">
-                        <div class="card mb-5" style="max-width: 540px;">
+                        <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="./imagens/tec4.jpg" class="img-fluid rounded-start" alt="...">
@@ -143,9 +143,9 @@
                 </a>
             </div>
             <div class="row">
-                <div class="col-md-3 col-xl-3">
+                <div class="col-lg-3">
                     <a href="./paginas/Politica/noticias/noticia1/index.html">
-                        <div class="card mt-4" style="width: 17rem;">
+                        <div class="card mt-4" id="noticia-horizontal">
                             <img src="./imagens/politica1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h3 class="card-title" id="subtitulo">Lula e Bolsonaro não querem apresentar propostas
@@ -154,9 +154,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 col-xl-3">
+                <div class="col-lg-3">
                     <a href="./paginas/Politica/noticias/noticia2/index.html">
-                        <div class="card mt-4" style="width: 17rem;">
+                        <div class="card mt-4"  id="noticia-horizontal">
                             <img src="./imagens/politica2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h3 class="card-title" id="subtitulo">Ciro Gomes critica lucro e distribuição de
@@ -165,9 +165,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 col-xl-3">
+                <div class="col-lg-3">
                     <a href="./paginas/Politica/noticias/noticia3/index.html">
-                        <div class="card mt-4" style="width: 17rem;">
+                        <div class="card mt-4"  id="noticia-horizontal">
                             <img src="./imagens/politica3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h3 class="card-title" id="subtitulo">Embaixadas consideram Ciro Nogueira ‘vago’ na
@@ -176,9 +176,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 col-xl-3">
+                <div class="col-lg-3">
                     <a href="./paginas/Politica/noticias/noticia4/index.html">
-                        <div class="card mt-4" style="width: 17rem;">
+                        <div class="card mt-4" id="noticia-horizontal">
                             <img src="./imagens/politica4.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h3 class="card-title" id="subtitulo">Ministra do TSE nega pedido de Lula para apagar
@@ -197,7 +197,7 @@
                 </a>
             </div>
             <div class="row mt-3">
-                <div class="col-md-7 col-xl-7">
+                <div class="col-lg-7 ">
                     <a href="./paginas/Esporte/noticias/noticia1/index.html">
                         <div class="card text-bg-dark">
                             <img src="./imagens/esporte1.jpg" class="card-img"
@@ -209,9 +209,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-5 col-xl-5 mt-2">
+                <div class="col-lg-5 mt-2" id="noticia-vertical">
                     <a href="./paginas/Esporte/noticias/noticia2/index.html">
-                        <div class="card mb-5" style="max-width: 540px;">
+                        <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="./imagens/esporte2.jpg" class="img-fluid rounded-start" alt="...">
@@ -228,7 +228,7 @@
                         </div>
                     </a>
                     <a href="./paginas/Esporte/noticias/noticia3/index.html">
-                        <div class="card mb-5" style="max-width: 540px;">
+                        <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="./imagens/esporte3.jpg" class="img-fluid rounded-start" alt="...">
@@ -245,7 +245,7 @@
                         </div>
                     </a>
                     <a href="./paginas/Esporte/noticias/noticia4/index.html">
-                        <div class="card mb-5" style="max-width: 540px;">
+                        <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="./imagens/esporte4.jpg" class="img-fluid rounded-start" alt="...">
@@ -272,9 +272,9 @@
                 </a>
             </div>
             <div class="row">
-                <div class="col-md-3 col-xl-3">
+                <div class="col-lg-3">
                     <a href="./paginas/Entretenimento/noticias/noticia1/index.html">
-                        <div class="card mt-4" style="width: 17rem;">
+                        <div class="card mt-4" id="noticia-horizontal">
                             <img src="./imagens/entretenimento1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h3 class="card-title" id="subtitulo">Os filmes que chegam aos cinemas brasileiros nesta
@@ -283,9 +283,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 col-xl-3">
+                <div class="col-lg-3">
                     <a href="./paginas/Entretenimento/noticias/noticia2/index.html">
-                        <div class="card mt-4" style="width: 17rem;">
+                        <div class="card mt-4" id="noticia-horizontal">
                             <img src="./imagens/entretenimento2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h3 class="card-title" id="subtitulo">Ouça à playlist do episódio “Terra de Caubóis” do
@@ -294,9 +294,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 col-xl-3">
+                <div class="col-lg-3">
                     <a href="./paginas/Entretenimento/noticias/noticia3/index.html">
-                        <div class="card mt-4" style="width: 17rem;">
+                        <div class="card mt-4" id="noticia-horizontal">
                             <img src="./imagens/entretenimento3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h3 class="card-title" id="subtitulo">Simone e Simaria anunciam fim da dupla</h3>
@@ -304,9 +304,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-3 col-xl-3">
+                <div class="col-lg-3">
                     <a href="./paginas/Entretenimento/noticias/noticia4/index.html">
-                        <div class="card mt-4" style="width: 17rem;">
+                        <div class="card mt-4" id="noticia-horizontal">
                             <img src="./imagens/entretenimento4.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h3 class="card-title" id="subtitulo">Briga de Brad Pitt e Angelina Jolie em 2016:
@@ -325,7 +325,7 @@
                 </a>
             </div>
             <div class="row mt-3">
-                <div class="col-md-7 col-xl-7">
+                <div class="col-lg-7">
                     <a href="./paginas/Saude/noticias/noticia1/index.html">
                         <div class="card text-bg-dark">
                             <img src="./imagens/saude1.jpg" class="card-img"
@@ -337,9 +337,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-5 col-xl-5 mt-2">
+                <div class="col-lg-5 mt-2" id="noticia-vertical">
                     <a href="./paginas/Saude/noticias/noticia2/index.html">
-                        <div class="card mb-5" style="max-width: 540px;">
+                        <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="./imagens/saude2.jpg" class="img-fluid rounded-start" alt="...">
@@ -355,7 +355,7 @@
                         </div>
                     </a>
                     <a href="./paginas/Saude/noticias/noticia3/index.html">
-                        <div class="card mb-5" style="max-width: 540px;">
+                        <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="./imagens/saude3.jpg" class="img-fluid rounded-start" alt="...">
@@ -371,7 +371,7 @@
                         </div>
                     </a>
                     <a href="./paginas/Saude/noticias/noticia4/index.html">
-                        <div class="card mb-5" style="max-width: 540px;">
+                        <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="./imagens/saude4.jpg" class="img-fluid rounded-start" alt="...">
