--- a/paginas/Tecnologia/index.html
+++ b/paginas/Tecnologia/index.html
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia1/index.html">
-                        <div class="card mb-4" style="max-width: 900px;">
+                        <div class="card mb-4" >
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/tec1.jpg" class="img-fluid rounded-start" alt="Competição de fotografia revela imagens
@@ -93,7 +93,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia2/index.html">
-                        <div class="card mb-4" style="max-width: 900px;">
+                        <div class="card mb-4" >
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/tec2.jpg" class="img-fluid rounded-start" alt="StoneCo desaba mais de 20% após balanço,
@@ -114,7 +114,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia3/index.html">
-                        <div class="card mb-4" style="max-width: 900px;">
+                        <div class="card mb-4">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/tec3.jpg" class="img-fluid rounded-start" alt="Lua e Marte estão em conjunção nesta
@@ -136,7 +136,7 @@
                 <hr />
                 <div class="col-md mt-2">
                     <a href="./noticias/noticia4/index.html">
-                        <div class="card mb-4" style="max-width: 900px;">
+                        <div class="card mb-4">
                             <div class="row g-0">
                                 <div class="col-md-5">
                                     <img src="../../imagens/tec4.jpg" class="img-fluid rounded-start" alt="Cosmonauta russo interrompe caminhada
