--- a/paginas/Tecnologia/noticias/noticia1/index.html
+++ b/paginas/Tecnologia/noticias/noticia1/index.html
@@ -51,7 +51,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="titulo-pagina"><strong>CONTATO</strong></a>
+                        <a class="nav-link" id="titulo-pagina" href="../../../Contato/index.html"><strong>CONTATO</strong></a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
